--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body class="font-poppins">
     <!-- header section -->
-    <header class="md:container md:mx-auto">
+    <header class="md:container md:mx-auto mb-32">
         <nav>
             <div class="navbar bg-base-100">
                 <div class="flex-1">
@@ -89,12 +89,12 @@
                 <div class="flex flex-col lg:flex-row  p-12 lg:p-24">
                     <!-- text content -->
                     <div class=" space-y-2 md:space-y-6 lg:space-y-7 flex-1">
-                        <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 
+                        <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4
                             with Smile</h1>
-                        <p>Amet minim mollit non deserunt ullamco 
+                        <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat <br>
                             duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <!-- img content -->
                     <div class="flex-1">
@@ -111,12 +111,12 @@
                 <div class="flex flex-col lg:flex-row  p-12 lg:p-24">
                     <!-- text content -->
                     <div class=" space-y-2 md:space-y-6 lg:space-y-7 flex-1">
-                        <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 
+                        <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4
                             with Smile</h1>
-                        <p>Amet minim mollit non deserunt ullamco 
+                        <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat <br>
                             duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <!-- img content -->
                     <div class="flex-1">
@@ -133,12 +133,12 @@
                 <div class="flex flex-col lg:flex-row  p-12 lg:p-24">
                     <!-- text content -->
                     <div class=" space-y-2 md:space-y-6 lg:space-y-7 flex-1">
-                        <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 
+                        <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4
                             with Smile</h1>
-                        <p>Amet minim mollit non deserunt ullamco 
+                        <p>Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat <br>
                             duis enim velit mollit.</p>
-                            <button class="btn bg-bike-primary text-white">Purchase</button>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <!-- img content -->
                     <div class="flex-1">
@@ -151,10 +151,61 @@
                 </div>
             </div>
         </div>
-
     </header>
     <!-- main section -->
     <main class="md:container md:mx-auto">
+
+        <!-- latest bike  -->
+        <section class="mb-32">
+            <h1 class="text-center text-5xl font-bold mb-14">latest News</h1>
+            <div class="grid gap-12 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- card 1 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id
+                            nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">Reade More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="images/others/latest2.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id
+                            nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">Reade More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                        <img src="images/others/latest3.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id
+                            nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white">Reade More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
