featured bike section done

--- a/index.html
+++ b/index.html
@@ -155,9 +155,21 @@
     <!-- main section -->
     <main class="md:container md:mx-auto">
 
-        <!-- latest bike  -->
+        <!-- Featured Bikes -->
+         <section class="mb-32">
+            <h1 class="text-5xl font-bold text-center mb-16">Featured Bikes In This Year</h1>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <img src="images/others/feature-bike.png" alt="">
+                <img src="images/others/feature-bike.png" alt="">
+                <img src="images/others/feature-bike.png" alt="">
+
+            </div>
+         </section>
+
+        <!-- latest bike news  -->
         <section class="mb-32">
-            <h1 class="text-center text-5xl font-bold mb-14">latest News</h1>
+            <h1 class="text-center text-5xl font-bold mb-14">Latest News</h1>
             <div class="grid gap-12 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <!-- card 1 -->
                 <div class="card hover:bg-red bg-base-100 shadow-xl">
