FAQ section done

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </section>
 
         <!-- Happy client  -->
-        <section class="mb-5">
+        <section class="mb-32">
            
             <h1 class="text-center text-4xl md:text-5xl font-bold mb-14">Happy <span class="text-[#E76F51]">Clients says</span></h1>
            
@@ -313,6 +313,48 @@
           </div>
 
         </section>
+
+        <!-- FAQ section -->
+         <section class="mb-32">
+            <h1 class="text-center text-4xl md:text-5xl font-bold mb-14">Frequently Asked <span class="text-[#E76F51]">Question</span></h1>
+            <div class="p-6 md:p-4 lg:p-0 md:gap-4 md:flex md:justify-evenly ">
+                <div>
+                    <img src="images/others/faq.png" alt="">
+                </div>
+                <div>
+                    <div class="collapse collapse-arrow border-2">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">What are the most important things I should
+                            <br>know about riding a bike?</div>
+                        <div class="collapse-content">
+                          <p class="font-normal text-[#7E848C]">Safety First! Always obey the rules of the road. Obey all traffic <br>signals, signs, and laws. Get in the mindset of “driving” your <br>bike—not just “riding” your bike. This will help you be a more <br>focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow border-2">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                            <br>new one?</div>
+                        <div class="collapse-content">
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow border-2">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                        <div class="collapse-content">
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow border-2 ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                        <div class="collapse-content">
+                          <p>hello</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+         </section>
 
     </main>
 
